// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpandableList /> should render with a Item 1`] = `
.c0 {
  padding: 10px 5px;
}

.c1 {
  font-size: 1rem;
  line-height: 20px;
}

.c1 label {
  min-height: 20px;
  margin-bottom: 2px;
  margin-right: 5px;
}

.c1 label * {
  cursor: pointer;
}

.c2 {
  display: inline-block;
  width: 20px;
  margin-right: 5px;
}

.c3.fa-stack {
  cursor: pointer;
  font-size: 1.125rem;
  line-height: 20px;
  width: 1em;
  height: 1em;
  vertical-align: text-top;
}

.c3.fa-stack:hover [class*="fa-"] {
  color: #702785;
  opacity: 1;
}

.c3 [class*="fa-"]:first-child {
  opacity: 0;
}

.c3 [class*="fa-"]:first-child ~ [class*="fa-"]:hover {
  color: #fff;
}

.c4 {
  font-size: 1.125rem;
}

.c5 {
  border: 0;
  padding: 0;
  text-align: left;
  background: transparent;
}

.c6 {
  border-left: 1px #e6e6e6 solid;
  margin-left: 35px;
  margin-top: 10px;
  padding-left: 5px;
}

<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={false}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <ExpandableListItem__ItemWrap
        padded={true}
      >
        <li
          className="c0"
        >
          <ExpandableListItem__Container>
            <div
              className="c1"
            >
              <Checkbox
                bsClass="checkbox"
                checked={false}
                disabled={false}
                inline={true}
                inputRef={[Function]}
                onChange={[MockFunction]}
                title=""
              >
                <label
                  className="checkbox-inline"
                  title=""
                >
                  <input
                    checked={false}
                    disabled={false}
                    onChange={[MockFunction]}
                    type="checkbox"
                  />
                </label>
              </Checkbox>
              <ExpandableListItem__Toggle>
                <div
                  className="c2"
                >
                  <ExpandableListItem__IconStack
                    className="fa-stack"
                    onClick={[Function]}
                    tabIndex={0}
                  >
                    <div
                      className="c3 fa-stack"
                      onClick={[Function]}
                      tabIndex={0}
                    >
                      <Icon
                        className="fa-stack-1x"
                        name="circle"
                        type="solid"
                      >
                        <FontAwesomeIcon
                          className="fa-stack-1x"
                          icon={
                            Object {
                              "iconName": "circle",
                              "prefix": "fas",
                            }
                          }
                        >
                          <svg
                            className="svg-inline--fa fa-circle"
                          />
                        </FontAwesomeIcon>
                      </Icon>
                      <Icon
                        className="fa-stack-1x"
                        name="angle-up"
                        type="solid"
                      >
                        <FontAwesomeIcon
                          className="fa-stack-1x"
                          icon={
                            Object {
                              "iconName": "angle-up",
                              "prefix": "fas",
                            }
                          }
                        >
                          <svg
                            className="svg-inline--fa fa-angle-up"
                          />
                        </FontAwesomeIcon>
                      </Icon>
                    </div>
                  </ExpandableListItem__IconStack>
                </div>
              </ExpandableListItem__Toggle>
              <ExpandableListItem__HeaderWrap
                className="header"
              >
                <span
                  className="c4 header"
                >
                  <ExpandableListItem__Header
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <button
                      className="c5"
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      Wheel of time
                    </button>
                  </ExpandableListItem__Header>
                </span>
              </ExpandableListItem__HeaderWrap>
            </div>
          </ExpandableListItem__Container>
          <ExpandableListItem__ExpandableContent>
            <div
              className="c6"
            />
          </ExpandableListItem__ExpandableContent>
        </li>
      </ExpandableListItem__ItemWrap>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with a nested ExpandableList 1`] = `
.c0 {
  padding: 10px 5px;
}

.c1 {
  font-size: 1rem;
  line-height: 20px;
}

.c1 label {
  min-height: 20px;
  margin-bottom: 2px;
  margin-right: 5px;
}

.c1 label * {
  cursor: pointer;
}

.c2 {
  display: inline-block;
  width: 20px;
  margin-right: 5px;
}

.c3.fa-stack {
  cursor: pointer;
  font-size: 1.125rem;
  line-height: 20px;
  width: 1em;
  height: 1em;
  vertical-align: text-top;
}

.c3.fa-stack:hover [class*="fa-"] {
  color: #702785;
  opacity: 1;
}

.c3 [class*="fa-"]:first-child {
  opacity: 0;
}

.c3 [class*="fa-"]:first-child ~ [class*="fa-"]:hover {
  color: #fff;
}

.c4 {
  font-size: 1.125rem;
}

.c5 {
  border: 0;
  padding: 0;
  text-align: left;
  background: transparent;
}

.c6 {
  border-left: 1px #e6e6e6 solid;
  margin-left: 35px;
  margin-top: 10px;
  padding-left: 5px;
}

<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={true}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <ExpandableListItem__ItemWrap
        padded={true}
      >
        <li
          className="c0"
        >
          <ExpandableListItem__Container>
            <div
              className="c1"
            >
              <Checkbox
                bsClass="checkbox"
                checked={false}
                disabled={false}
                inline={true}
                inputRef={[Function]}
                onChange={[MockFunction]}
                title=""
              >
                <label
                  className="checkbox-inline"
                  title=""
                >
                  <input
                    checked={false}
                    disabled={false}
                    onChange={[MockFunction]}
                    type="checkbox"
                  />
                </label>
              </Checkbox>
              <ExpandableListItem__Toggle>
                <div
                  className="c2"
                >
                  <ExpandableListItem__IconStack
                    className="fa-stack"
                    onClick={[Function]}
                    tabIndex={0}
                  >
                    <div
                      className="c3 fa-stack"
                      onClick={[Function]}
                      tabIndex={0}
                    >
                      <Icon
                        className="fa-stack-1x"
                        name="circle"
                        type="solid"
                      >
                        <FontAwesomeIcon
                          className="fa-stack-1x"
                          icon={
                            Object {
                              "iconName": "circle",
                              "prefix": "fas",
                            }
                          }
                        >
                          <svg
                            className="svg-inline--fa fa-circle"
                          />
                        </FontAwesomeIcon>
                      </Icon>
                      <Icon
                        className="fa-stack-1x"
                        name="angle-down"
                        type="solid"
                      >
                        <FontAwesomeIcon
                          className="fa-stack-1x"
                          icon={
                            Object {
                              "iconName": "angle-down",
                              "prefix": "fas",
                            }
                          }
                        >
                          <svg
                            className="svg-inline--fa fa-angle-down"
                          />
                        </FontAwesomeIcon>
                      </Icon>
                    </div>
                  </ExpandableListItem__IconStack>
                </div>
              </ExpandableListItem__Toggle>
              <ExpandableListItem__HeaderWrap
                className="header"
              >
                <span
                  className="c4 header"
                >
                  <ExpandableListItem__Header
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <button
                      className="c5"
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      Wheel of time
                    </button>
                  </ExpandableListItem__Header>
                </span>
              </ExpandableListItem__HeaderWrap>
            </div>
          </ExpandableListItem__Container>
          <ExpandableListItem__ExpandableContent>
            <div
              className="c6"
            >
              <ExpandableList>
                <ul
                  className="list"
                >
                  <ExpandableListItem
                    checked={false}
                    expandable={true}
                    expanded={false}
                    header="Edmonds Field"
                    indetermined={false}
                    onChange={[MockFunction]}
                    padded={true}
                    selectable={true}
                    stayExpanded={false}
                  >
                    <ExpandableListItem__ItemWrap
                      padded={true}
                    >
                      <li
                        className="c0"
                      >
                        <ExpandableListItem__Container>
                          <div
                            className="c1"
                          >
                            <Checkbox
                              bsClass="checkbox"
                              checked={false}
                              disabled={false}
                              inline={true}
                              inputRef={[Function]}
                              onChange={[MockFunction]}
                              title=""
                            >
                              <label
                                className="checkbox-inline"
                                title=""
                              >
                                <input
                                  checked={false}
                                  disabled={false}
                                  onChange={[MockFunction]}
                                  type="checkbox"
                                />
                              </label>
                            </Checkbox>
                            <ExpandableListItem__Toggle>
                              <div
                                className="c2"
                              >
                                <ExpandableListItem__IconStack
                                  className="fa-stack"
                                  onClick={[Function]}
                                  tabIndex={0}
                                >
                                  <div
                                    className="c3 fa-stack"
                                    onClick={[Function]}
                                    tabIndex={0}
                                  >
                                    <Icon
                                      className="fa-stack-1x"
                                      name="circle"
                                      type="solid"
                                    >
                                      <FontAwesomeIcon
                                        className="fa-stack-1x"
                                        icon={
                                          Object {
                                            "iconName": "circle",
                                            "prefix": "fas",
                                          }
                                        }
                                      >
                                        <svg
                                          className="svg-inline--fa fa-circle"
                                        />
                                      </FontAwesomeIcon>
                                    </Icon>
                                    <Icon
                                      className="fa-stack-1x"
                                      name="angle-up"
                                      type="solid"
                                    >
                                      <FontAwesomeIcon
                                        className="fa-stack-1x"
                                        icon={
                                          Object {
                                            "iconName": "angle-up",
                                            "prefix": "fas",
                                          }
                                        }
                                      >
                                        <svg
                                          className="svg-inline--fa fa-angle-up"
                                        />
                                      </FontAwesomeIcon>
                                    </Icon>
                                  </div>
                                </ExpandableListItem__IconStack>
                              </div>
                            </ExpandableListItem__Toggle>
                            <ExpandableListItem__HeaderWrap
                              className="header"
                            >
                              <span
                                className="c4 header"
                              >
                                <ExpandableListItem__Header
                                  onClick={[Function]}
                                  tabIndex={0}
                                  type="button"
                                >
                                  <button
                                    className="c5"
                                    onClick={[Function]}
                                    tabIndex={0}
                                    type="button"
                                  >
                                    Edmonds Field
                                  </button>
                                </ExpandableListItem__Header>
                              </span>
                            </ExpandableListItem__HeaderWrap>
                          </div>
                        </ExpandableListItem__Container>
                        <ExpandableListItem__ExpandableContent>
                          <div
                            className="c6"
                          />
                        </ExpandableListItem__ExpandableContent>
                      </li>
                    </ExpandableListItem__ItemWrap>
                  </ExpandableListItem>
                </ul>
              </ExpandableList>
            </div>
          </ExpandableListItem__ExpandableContent>
        </li>
      </ExpandableListItem__ItemWrap>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with no children 1`] = `
<ExpandableList>
  <ul
    className="list"
  />
</ExpandableList>
`;
